// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StarRating /> should match snapshot for small size 1`] = `
<span
  class="root"
>
  <span
    class="starList"
  >
    <i
      class="root star fullStar"
      style="width: 16px; height: 16px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 16px; height: 16px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 16px; height: 16px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 16px; height: 16px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 16px; height: 16px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
  </span>
  <span
    class="root sizeScale3 label"
  >
    Hello World!
  </span>
</span>
`;

exports[`<StarRating /> should match snapshot with label 1`] = `
<span
  class="root"
>
  <span
    class="starList"
  >
    <i
      class="root star fullStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
  </span>
  <span
    class="root sizeScale4 label"
  >
    Hello World!
  </span>
</span>
`;

exports[`<StarRating /> should match snapshot with value 1`] = `
<span
  class="root"
>
  <span
    class="starList"
  >
    <i
      class="root star fullStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star fullStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star halfStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 15.396V6.095l1.71 4.036 4.38.376-3.323 2.878.995 4.281M22 9.244l-7.19-.617L11.998 2 9.19 8.627 2 9.244l5.454 4.726L5.82 21 12 17.272 18.18 21l-1.635-7.03L22 9.244z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
  </span>
  <span
    class="root sizeScale4 label"
  >
    2.7
  </span>
</span>
`;

exports[`<StarRating /> should match snapshot without value 1`] = `
<span
  class="root"
>
  <span
    class="starList"
  >
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
    <i
      class="root star emptyStar"
      style="width: 20px; height: 20px;"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
        />
      </svg>
    </i>
  </span>
  <span
    class="root sizeScale4 label"
  />
</span>
`;
